modified .gitignore: add vim.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,12 @@ qtcreator-*
 # Emacs
 .#*
 
+# vim.gitignore
+*.s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
 # Catkin custom files
 CATKIN_IGNORE
